# investigating-muon

./: .gitignore  README.md  datasets.py  models.py  optimizers.py  pyproject.toml  stats.py  train.py
notebooks/: load_data.py  plots.ipynb
scripts/: cifar10_mlp_imb.py  cifar10_mlp_rs.py  mnist_imb.py  mnist_lr.py  mnist_rs.py  utils.py
